--- a/src/components/mapChart/style.scss
+++ b/src/components/mapChart/style.scss
@@ -1,18 +1,12 @@
-
 .container {
   border: 1px solid black;
   border-radius: 5px;
-  margin-top:  10px;
 
   .header {
     display: flex;
     flex-direction: row;
 
-    .selectClass {
-      margin: 10px;
-    }
-
-    .chartTitle {
+    .title {
       display: flex;
       flex: 1;
       flex-direction: row;
@@ -20,14 +14,5 @@
       align-items: center;
     }
   }
-
-  .chartDiv {
-    display: inline-flex;
-    justify-content: center;
-    flex-direction: column;
-
-  }
 }
-
-
 
