--- a/src/components/chartOne/style.scss
+++ b/src/components/chartOne/style.scss
@@ -1,8 +1,5 @@
 
-.container1 {
-  border: 1px solid black;
-  border-radius: 5px;
-  margin-top:  10px;
+.chartOne {
 
   .header {
     display: flex;
@@ -27,7 +24,9 @@
     flex-direction: column;
 
   }
+
 }
+
 
 
 
