--- a/src/components/mapChart/style.scss
+++ b/src/components/mapChart/style.scss
@@ -1,6 +1,4 @@
-.container {
-  border: 1px solid black;
-  border-radius: 5px;
+.mapChart {
 
   .header {
     display: flex;
@@ -15,5 +13,8 @@
       align-items: center;
     }
   }
+
 }
+
+
 
