Poprawa sposobu wyświetlania wykresów. Poprawa błędów w wykresie twarzy Chernoffa. Stworzenie plików do wykresu piramidy populacji

--- a/src/components/barChart/style.scss
+++ b/src/components/barChart/style.scss
@@ -1,12 +1,7 @@
-.chernoff {
-
-  .controls {
+.barChart {
+  .header {
     display: flex;
     flex-direction: row;
     padding: 8px;
-  }
-
-  .canvas {
-
   }
 }
