--- a/src/components/chartOne/style.scss
+++ b/src/components/chartOne/style.scss
@@ -22,6 +22,8 @@
     display: inline-flex;
     justify-content: center;
     flex-direction: column;
+    height: 400px;
+    width: 100%;
 
   }
 
