--- a/src/components/barChart/style.scss
+++ b/src/components/barChart/style.scss
@@ -4,4 +4,13 @@
     flex-direction: row;
     padding: 8px;
   }
+
+  .title {
+    display: flex;
+    flex: 1;
+    padding: 5px;
+    margin-left: 4px;
+    justify-content: center;
+    align-items: center;
+  }
 }
