--- a/src/components/mapChart/style.scss
+++ b/src/components/mapChart/style.scss
@@ -8,7 +8,8 @@
     .title {
       display: flex;
       flex: 1;
-      flex-direction: row;
+      padding: 5px;
+      margin-left: 4px;
       justify-content: center;
       align-items: center;
     }
