--- a/src/components/mainPage/style.scss
+++ b/src/components/mainPage/style.scss
@@ -2,6 +2,12 @@ input {
   padding: 10px;
 }
 
+.mainPage {
+  .itemContainer {
+    padding: 5px;
+  }
+}
+
 .container {
   border: 1.5px solid black;
   border-radius: 4px;
