Zmiana sposobu wyświetlania twarz Chernoffa. Od teraz po kliknięciu myszką na dany kraj wyświetla się do niego wykres twarz Chernoofa z podziałem na mężczyzny i kobiety

--- a/src/components/barChart/style.scss
+++ b/src/components/barChart/style.scss
@@ -13,4 +13,9 @@
     justify-content: center;
     align-items: center;
   }
+
+  .chart {
+    display: flex;
+    justify-content: center;
+  }
 }
